--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "react-icons": "^3.10.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0"
   }
