--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage":"https://syedrameezahmed18.github.io/Meteorite/",
   "name": "astroworld",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
