--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage":"https://syedrameezahmed18.github.io/Meteorite",
   "name": "astroworld",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "react-icons": "^3.10.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
