--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{ 
-  "homepage":"https://syedrameezahmed18.github.io/Meteorite/",
+{
+  "homepage": "https://syedrameezahmed18.github.io/Meteorite/",
   "name": "astroworld",
   "version": "0.1.0",
   "private": true,
@@ -10,10 +10,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,6 +37,7 @@
     "react-icons": "^3.10.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.7.16",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   }
